--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -4,8 +4,8 @@
     letter-spacing: 2px;
     font-family: fantasy;
     margin: 1rem;
-}
 
-.logo img{
-    max-width: 20px;
+    img {
+        max-width: 20px;
+    }
 }
