--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -2,4 +2,5 @@ html, body, #root {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: block;
     place-items: normal;
+    background-color: darkgrey;
 }
