Ändrat bilder och routat Tronds artikel

--- a/src/styles/_articlecard.scss
+++ b/src/styles/_articlecard.scss
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1rem;
+    margin: .5rem;
     background-color: white;
     color: black;
-    padding: 1rem;
+    padding: .5rem;
     border-radius: 5px;
 
     img {
-        max-width: 98px;
+        max-width: 170px;
         border-radius: 2px;
     }
 
