--- a/src/styles/_articlecard.scss
+++ b/src/styles/_articlecard.scss
@@ -3,18 +3,24 @@
     flex-direction: column;
     align-items: center;
     margin: .5rem;
-    background-color: white;
-    color: black;
+    background-color: #fcf9f2;
     padding: .5rem;
-    border-radius: 5px;
+    border: 1px solid #e0d8c3; /* lätt kant för polaroid-effekt */
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.2);
+
 
     img {
-        max-width: 170px;
-        border-radius: 2px;
+        max-width: 150px;
+        border: 1px solid #d3c4a3;
     }
 
     figcaption {
         font-weight: 600;
-        margin-top: .5rem;
+        margin-top: .75rem;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1rem;
+        text-align: center;
+        letter-spacing: 0.5px;
+        color: #2b2b2b;
     }
 }
