--- a/src/styles/_heroscroll.scss
+++ b/src/styles/_heroscroll.scss
@@ -10,14 +10,19 @@
     object-fit: cover;
   }
 
-  .hero-title {
+  .hero-text {
     color: white;
-    font-size: 3rem;
     text-align: center;
     position: absolute;
     top: 28%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    z-index: 2;
+
+    h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
   }
 }
