--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -1,15 +1,13 @@
 .trond-article{
-    background-color: white;
 
     .dollarBill-section {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 17rem;
         padding-bottom: 17rem;
 
         h2 {
-            color: black;
+            color: white;
         }
 
         img {
