--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -14,6 +14,19 @@
 
   .overlay-image {
     z-index: 10; 
-    opacity: 0;  
+    opacity: 0;
+    height: 85%;  
+  }
+
+  .text-content {
+    position: absolute;
+    z-index: 20;
+    bottom: 28rem;
+    right: 7rem;
+    color: black;
+    font-size: 3rem;
+    opacity: 0;
+    transform: rotate(-30deg); 
+    transform-origin: bottom right;
   }
 }
