--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -21,10 +21,10 @@
   .text-content {
     position: absolute;
     z-index: 20;
-    bottom: 28rem;
-    right: 7rem;
+    bottom: 14.7rem;
+    right: 0;
     color: black;
-    font-size: 3rem;
+    font-size: 1.6rem;
     opacity: 0;
     transform: rotate(-30deg); 
     transform-origin: bottom right;
