--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -1,4 +1,54 @@
 .trond-article{
+    font-family: "math";
+
+    .story-intro {
+        background-color: black;
+        padding-top: 15rem;
+        padding-bottom: 12rem;
+        display: flex;
+        flex-direction: column;
+
+        p {
+            margin: 0 2rem 3rem 2rem;
+            text-align: center;
+            font-size: x-large;
+        }
+    }
+
+    .question {
+        position: relative;  
+        background-color: black;
+        padding: 2rem;
+        padding-bottom: 20rem;
+        margin: 0;
+        text-align: center;
+        font-size: 1.8rem;
+
+        h2 {
+            margin: 0 0 3rem 0;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 40vh;          
+            pointer-events: none;
+            background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.7) 20%,
+            rgba(0, 0, 0, 0.5) 50%, 
+            rgb(255, 255, 255, 1) 100% 
+            );
+        }
+    }
+
+    .interview {
+        background-color: white;
+        padding-bottom: 50rem;
+    }
 
     .dollarBill-section {
         display: flex;
