--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -1,7 +1,7 @@
 .img-scroll-flipbook {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
 
   img {
