--- a/src/styles/_scrolltext.scss
+++ b/src/styles/_scrolltext.scss
@@ -8,17 +8,26 @@
   z-index: 10;
 
   p {
-    margin: 1rem 0;
+    margin: 1rem 0 4rem 0;
     line-height: 1.6;
     font-size: 1rem;
     color: white;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 1rem;
+    border-radius: 10px;
   }
 
-  // Startvärden för animation
   opacity: 0;
   transform: translateY(50px);
 
-  // Fallback så texten inte döljs av föräldrar
   position: relative;
   z-index: 2;
+
+  .text-1{
+    margin-right: 12rem;
+  }
+
+  .text-2{
+    margin-left: 12rem;
+  }
 }
