--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -49,9 +49,13 @@
         flex-direction: column;
         align-items: center;
         padding-bottom: 17rem;
+        margin-top: 85rem;
+        background-color: white;
+        padding-top: 8rem;
 
-        h2 {
-            color: white;
+        h3 {
+            color: black;
+            font-size: x-large;
         }
 
         img {
