--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -12,6 +12,7 @@
             margin: 0 2rem 3rem 2rem;
             text-align: center;
             font-size: x-large;
+            color: white;
         }
     }
 
@@ -25,6 +26,7 @@
 
         h2 {
             margin: 0 0 3rem 0;
+            color: white;
         }
 
         &::after {
