--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -46,22 +46,38 @@
         }
     }
 
+    .space-container {
+        padding: 35rem 0;
+    }
+
     .dollarBill-section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-bottom: 17rem;
-        background-color: white;
-        padding-top: 8rem;
+        text-align: center;
+        background: white;
+        padding: 10rem 0;
+        position: relative;
+        z-index: 1;
+
 
         h3 {
+            font-size: 1.5rem;
             color: black;
-            font-size: x-large;
         }
 
         img {
             width: 300px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+            max-width: 90%;
+        }
+    }
+
+    .text-container {
+        background-color: white;
+        margin: 0;
+        padding-bottom: 5rem;
+
+        p {
+            margin: 0 3rem 0 3rem;
+            color: black;
+            font-size: 1.2rem;
         }
     }
 }
