--- a/src/styles/_heroscroll.scss
+++ b/src/styles/_heroscroll.scss
@@ -1,12 +1,12 @@
 .hero-scroll {
   position: relative;
-  height: 150vh;
+  height: calc(var(--vh, 1vh) * 150);
 
   .hero-image {
     position: sticky;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     object-fit: cover;
   }
 
