--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -6,7 +6,7 @@
 .img-scroll-flipbook {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   overflow: hidden;
   background-color: black;
 
@@ -46,7 +46,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 20vh; 
+    height: calc(var(--vh, 1vh) * 20);
     pointer-events: none;
     z-index: 15;
 
