--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,7 +6,7 @@
     "footer";
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 1fr;
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 
   .header {
     grid-area: header;
