--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -37,7 +37,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 40vh;          
+            height: calc(var(--vh, 1vh) * 40);      
             pointer-events: none;
             background: linear-gradient(
             to bottom,
@@ -48,7 +48,9 @@
         }
     }
 
- 
+    .space-container {
+        padding: 45rem 0;
+    }
 
     .dollarBill-section {
         text-align: center;
