--- a/src/styles/_zoomtransition.scss
+++ b/src/styles/_zoomtransition.scss
@@ -5,7 +5,7 @@
 .zoom-container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   overflow: visible;
 
   &::before {
