--- a/src/styles/_zoomtransition.scss
+++ b/src/styles/_zoomtransition.scss
@@ -1,5 +1,7 @@
 .zoom-section {
   width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .zoom-container {
@@ -26,6 +28,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  z-index: 2;
 }
 
 .zoom-image {
@@ -35,6 +38,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  will-change: transform, opacity;
 }
 
 .zoom-image.base {
