--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -53,7 +53,7 @@
         padding: 10rem 0 10rem 0;
         z-index: 0;
         position: relative;
-        margin-top: 85rem;
+        margin-top: 40rem;
 
         h3 {
             font-size: 1.5rem;
@@ -74,6 +74,14 @@
             margin: 0 4rem 0 4rem;
             color: black;
             font-size: 1.2rem;
+        }
+    }
+}
+
+@media (min-width: 400px) {
+    .trond-article {
+        .dollarBill-section {
+            margin-top: 85rem;
         }
     }
 }
