--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -1,13 +1,8 @@
-html {
-    --vh: 1vh;
-    height: 100%;
-}
-
-body, #root {
+html, body, #root {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: block;
+    place-items: normal;
     background-color: #fcf9f2bb;
     overscroll-behavior: none;
-    min-height: 100%;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
+    --vh: 1vh;
 }
