--- a/src/styles/_zoomtransition.scss
+++ b/src/styles/_zoomtransition.scss
@@ -1,25 +1,34 @@
-.zoom-section {
-  width: 100%;
+.transition-block {
   position: relative;
+  overflow: hidden; 
   z-index: 1;
-}
+  margin-bottom: 0;
+  isolation: isolate;
+  min-height: calc(var(--vh, 1vh) * 400);
 
-.zoom-container {
-  position: relative;
-  width: 100%;
-  height: calc(var(--vh, 1vh) * 100);
-  overflow: visible;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
+  .zoom-section {
     width: 100%;
-    height: 100px;
-    background: linear-gradient(to bottom, white, rgba(255, 255, 255, 0));
-    pointer-events: none;
-    z-index: 4;
+    position: relative;
+    z-index: 1;
+  }
+
+  .zoom-container {
+    position: relative;
+    width: 100%;
+    height: calc(var(--vh, 1vh) * 100);
+    overflow: visible;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background: linear-gradient(to bottom, white, rgba(255, 255, 255, 0));
+      pointer-events: none;
+      z-index: 4;
+    }
   }
 }
 
