--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -50,7 +50,7 @@
 
     .dollarBill-section {
         text-align: center;
-        padding: 5rem 0 10rem 0;
+        padding: 0 0 10rem 0;
         position: relative;
         z-index: 1;
 
