--- a/src/styles/_zoomtransition.scss
+++ b/src/styles/_zoomtransition.scss
@@ -29,6 +29,7 @@
       pointer-events: none;
       z-index: 4;
     }
+
   }
 }
 
@@ -45,7 +46,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 810px;
   object-fit: cover;
   will-change: transform, opacity;
 }
