--- a/src/styles/_zoomtransition.scss
+++ b/src/styles/_zoomtransition.scss
@@ -46,13 +46,14 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 810px;
+  height: 100%;
   object-fit: cover;
   will-change: transform, opacity;
 }
 
 .zoom-image.base {
   z-index: 0;
+  transform: none;
 }
 
 .zoom-image.overlay {
