--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -63,6 +63,7 @@
         img {
             width: 300px;
             max-width: 90%;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
         }
     }
 
