--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -48,12 +48,16 @@
         }
     }
 
+    .childhood {
+        color: black;
+        font-size: 1.2rem;
+        margin: 0 4rem 0 4rem;
+        margin-bottom: 7rem;
+    }
+
     .dollarBill-section {
         text-align: center;
         padding: 0 0 10rem 0;
-        position: relative;
-        z-index: 1;
-
 
         h3 {
             font-size: 1.5rem;
