--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -51,8 +51,7 @@
     .childhood {
         color: black;
         font-size: 1.2rem;
-        margin: 0 4rem 0 4rem;
-        margin-bottom: 7rem;
+        margin: -3rem 4rem 7rem 4rem;
     }
 
     .dollarBill-section {
