--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -51,7 +51,13 @@
     .childhood {
         color: black;
         font-size: 1.2rem;
-        margin: -10rem 4rem 7rem 4rem;
+        margin: -10rem 4rem 4rem 4rem;
+    }
+    
+    .trond-audio {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 8rem;
     }
 
     .dollarBill-section {
