--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -1,6 +1,7 @@
 .trond-article{
     font-family: "math";
     background-color: white;
+    padding-bottom: 3rem;
 
     .story-intro {
         padding-top: 15rem;
@@ -52,6 +53,10 @@
         color: black;
         font-size: 1.2rem;
         margin: -10rem 3rem 4rem 3rem;
+
+        h4 {
+            font-size: 1.4rem;
+        }
     }
     
     .trond-audio {
@@ -64,21 +69,20 @@
         }
     }
 
-    .school, .frank {
+    .school, .frank, .end-story {
         color: black;
         font-size: 1.2rem;
         margin: 3rem 3rem 4rem 3rem;
-    }
 
-    .frank {
         h4 {
             font-size: 1.4rem;
         }
     }
+  
 
     .dollarBill-section {
         text-align: center;
-        padding: 0 0 10rem 0;
+        padding: 3rem 0 4rem 0;
 
         h3 {
             font-size: 1.5rem;
@@ -92,9 +96,9 @@
         }
     }
 
+
     .text-container {
-        margin: 0;
-        padding-bottom: 5rem;
+        margin: 0 0 4rem 0;
 
         p {
             margin: 0 3rem 0 3rem;
