--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -82,7 +82,8 @@
 
     .dollarBill-section {
         text-align: center;
-        padding: 3rem 0 4rem 0;
+        padding: 0 0 4rem 0;
+        margin-top: 5rem;
 
         h3 {
             font-size: 1.5rem;
