la till bild och bildtext

--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -78,6 +78,17 @@
             font-size: 1.4rem;
         }
     }
+
+    .school .popup-figure {
+        img {
+            width: 90%;
+        }
+        
+        figcaption {
+            font-size: 0.8rem;
+            color: #203E51;
+        }
+    }
   
 
     .dollarBill-section {
