--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -33,12 +33,12 @@
     position: absolute;
     top: 120%;
     left: 0;
-    background: white;
+    background: #f9f9f9;
     border: 1px solid #ddd;
     padding: 10px;
     border-radius: 4px;
     width: 220px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.7);
     z-index: 10;
   }
 }
