--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -33,6 +33,7 @@
     transform: translate(-50%, -50%);
     font-size: 2rem;
     text-align: center;
+    font-style: italic;
   }
 
   .text-content {
