--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -101,16 +101,18 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        background-color: #0000000a;
+        padding-top: 1.5rem;
 
         img {
             max-height: 350px;
-            width: 260px;  
+            width: 285px;  
             display: flex
         }
 
         .slider-caption {
             margin-top: 10px; 
-            color: black;
+            color: #203E51;
             font-size: 1rem;
             text-align: center;
             width: 100%;
@@ -120,21 +122,21 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.4);
             border: none;
             color: white;
             font-size: 2rem;
-            padding: 0 12px;
+            padding: 0 10px;
             cursor: pointer;
             user-select: none;
             z-index: 10;
 
             &.prev {
-            left: 10px;
+            left: 5px;
             }
 
             &.next {
-            right: 10px;
+            right: 5px;
             }
         }
     }
