--- a/src/styles/_scrolltext.scss
+++ b/src/styles/_scrolltext.scss
@@ -31,3 +31,15 @@
     margin-left: 12rem;
   }
 }
+
+@media (min-width: 768px) {
+  .scroll-text {
+    .text-1{
+      margin-right: 30rem;
+    }
+
+    .text-2{
+      margin-left: 30rem;
+    }
+  }
+}
