--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -202,6 +202,10 @@
         }
 
         .slider-section {
+            img {
+                width: 100%;
+            }
+
             .slider-button {
                 &.prev {
                     left: 40px;
