mer media queries

--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -131,3 +131,17 @@
   }
 }
 
+@media (min-width: 2000px) {
+    .img-scroll-flipbook {
+    
+    .overlay-image {
+      width: 30%;
+    }
+
+    .text-content {
+      left: 20%;
+      font-size: larger;
+    }
+  }
+}
+
