--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -253,9 +253,14 @@
             }
         }
 
+        .story-intro p {
+            font-size: 2.5rem;
+        }
+
         .question {
             padding-top: 25rem;
             padding-bottom: 30rem;
+            font-size: 3rem;
         }
 
         .childhood, .school, .frank, .end-story {
