--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -276,6 +276,10 @@
         .trond-audio {
             margin-top: 12rem;
             margin-bottom: 12rem;
+
+            audio {
+                width: 1000px;
+            }
         }
 
         .flex-dollar {
