--- a/src/styles/_articlecard.scss
+++ b/src/styles/_articlecard.scss
@@ -5,8 +5,9 @@
     margin: .5rem;
     background-color: #fcf9f2;
     padding: .5rem;
-    border: 1px solid #e0d8c3; /* lätt kant för polaroid-effekt */
+    border: 1px solid #e0d8c3; 
     box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
+    width: 169px;
 
 
     img {
