--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -36,18 +36,15 @@
     font-style: italic;
   }
 
-  .text-content {
+  .over-image-content {
     position: absolute;
     z-index: 20;
     position: absolute;
-    top: 72%;
-    left: 65%;
-    transform: rotate(-30deg);
+    top: 65%;
+    left: 60%;
     color: black;
-    text-shadow:
-    3px 3px 6px rgba(0, 0, 0, 0.8),  
-    6px 6px 12px rgba(0, 0, 0, 0.6),  
-    0 0 2px rgba(0, 0, 0, 0.9); 
+    width: 180px;
+    height: auto;
   }
 
   &::after {  
@@ -75,7 +72,7 @@
         width: 87%;
       }
 
-      .text-content {
+      .over-image-content {
         left: 56%;
       }
   }
@@ -87,7 +84,7 @@
       width: 78%;
     }
 
-    .text-content {
+    .over-image-content {
       left: 49%;
     }
   }
@@ -103,7 +100,7 @@
       width: 70%;
     }
 
-    .text-content {
+    .over-image-content {
       left: 45%;
     }
   }
@@ -125,7 +122,7 @@
       width: 50%;
     }
 
-    .text-content {
+    .over-image-content {
       left: 32%;
     }
   }
@@ -138,7 +135,7 @@
       width: 30%;
     }
 
-    .text-content {
+    .over-image-content {
       left: 20%;
       font-size: larger;
     }
