--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -105,7 +105,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-color: #0000000a;
+        background-color: rgb(169 169 169 / 10%);
         padding-top: 1.5rem;
 
         img {
