--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,5 +9,5 @@
 @use 'scrollvideo';
 @use 'zoomtransition';
 @use 'scrolltext.scss';
-@use '_popup.scss';
-@use '_imgeffect.scss';
+@use 'popup.scss';
+@use 'imgeffect.scss';
