--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -74,13 +74,23 @@
         }
     }
 
-    .school, .frank, .end-story {
+    .school, .frank, .end-story, .dark-thoughts, .crime, .riksalarm, .responsibility {
         color: black;
         font-size: 1.2rem;
         margin: 3rem 3rem 4rem 3rem;
 
         h4 {
             font-size: 1.4rem;
+        }
+    }
+
+    .end-story {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        img {
+            width: 100%;
         }
     }
 
@@ -153,7 +163,6 @@
         .dollarBill-section {
             text-align: center;
             padding: 0 0 4rem 0;
-            margin-top: 5rem;
 
             h3 {
                 font-size: 1.5rem;
