--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -210,7 +210,7 @@
             }
         }
 
-        .school, .frank, .end-story {
+        .school, .frank, .end-story, .dark-thoughts, .crime, .riksalarm, .responsibility {
             margin-left: 10rem;
             margin-right: 10rem;
         }
@@ -272,11 +272,11 @@
             font-size: 3rem;
         }
 
-        .childhood, .school, .frank, .end-story {
+        .childhood, .school, .frank, .end-story, .dark-thoughts, .crime, .riksalarm, .responsibility {
             font-size: 2rem;
         }
 
-        .childhood, .frank, .end-story{
+        .childhood, .frank, .end-story, .dark-thoughts, .crime, .riksalarm, .responsibility{
             h4 {
                 font-size: 3rem;
             }
