--- a/src/styles/_articlecard.scss
+++ b/src/styles/_articlecard.scss
@@ -1,27 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 .article-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: .5rem;
-    background-color: #fcf9f2;
-    padding: .5rem;
-    border: 1px solid #e0d8c3; 
+    margin: 2rem 0 2rem 0;
+    background-color: #bf9f78;
+    padding: 1rem;
+    border-radius: 5px; 
     box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
-    width: 169px;
-
+    min-width: 280px;
+    font-family: "Roboto","Inter", sans-serif !important;
 
     img {
-        max-width: 150px;
-        border: 1px solid #d3c4a3;
+        max-width: 280px;
     }
 
     figcaption {
         font-weight: 600;
-        margin-top: .75rem;
-        font-size: 1rem;
+        margin-top: 2rem;
+        font-size: 1.3rem;
         text-align: center;
         letter-spacing: 0.5px;
-        color: Black;
+        color: #403116;
         font-weight: bold;
     }
 }
