--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -7,6 +7,7 @@
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 1fr;
   min-height: calc(var(--vh, 1vh) * 100);
+  background-color: #d9c2a7;
 
   .header {
     grid-area: header;
