--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -1,12 +1,5 @@
 .logo {
     display: flex;
-    align-items: center;
-    letter-spacing: 2px;
-    font-family: fantasy;
-    margin: 1rem;
-    color: #2b2b2b;
-
-    img {
-        max-width: 20px;
-    }
+    justify-content: center;
+    margin: 2rem 0 4rem 0;
 }
