--- a/src/styles/_skjermtid.scss
+++ b/src/styles/_skjermtid.scss
@@ -24,20 +24,27 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin: 0 0 0 2rem;
 
         img {
             max-width: 200px;
-            margin-bottom: 2rem;
         }
 
         p {
-            width: 200px;
+            width: 50%;
+            margin: 0 1rem 0 2rem;
         }
     }
 
     .limb2 {
         margin: 2rem 2rem 4rem 2rem;
+    }
+
+    .digital {
+        margin: 4rem 2rem;
+
+        p{
+            margin: 0 0 0 1rem !important;
+        }
     }
 
     .scrolling {
@@ -61,6 +68,7 @@
             border-radius: 999px;
             padding: 0.6rem 2rem;
             font-size: 0.8rem;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         }
 
         button.is-selected {
