--- a/src/styles/_skjermtid.scss
+++ b/src/styles/_skjermtid.scss
@@ -50,7 +50,7 @@
 
     .survey {
         max-width: 350px;
-        margin: 5rem 2rem 5rem 2rem;
+        margin: 5rem 0;
 
         .survey-question {
             margin-bottom: 2rem;
