--- a/src/styles/_articlecard.scss
+++ b/src/styles/_articlecard.scss
@@ -10,6 +10,7 @@
     border-radius: 5px; 
     box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
     min-width: 280px;
+    height: 407px;
     font-family: "Roboto","Inter", sans-serif !important;
 
     img {
@@ -19,7 +20,7 @@
 
     figcaption {
         font-weight: 600;
-        margin-top: 2rem;
+        margin-top: 3rem;
         font-size: 1.3rem;
         text-align: center;
         letter-spacing: 0.5px;
