--- a/src/styles/_imgeffect.scss
+++ b/src/styles/_imgeffect.scss
@@ -6,3 +6,12 @@
         width: 200px;
     }
 }
+
+@media (min-width: 2000px) {
+    .reveal-wrap {
+
+    .reveal-img {
+        width: 300px;
+    }
+}
+}
