--- a/src/styles/_scrollingboat.scss
+++ b/src/styles/_scrollingboat.scss
@@ -1,14 +1,32 @@
-.scrolling-boat {
+.wrapper {
     position: fixed;
     left: 0;
-    top: 20px;
-    width: 60px;
-    height: auto;
+    top: 0;
+    width: 100%;
     z-index: 1000;
     opacity: 0;
     transition: opacity 0.4s ease-out;
+    
+    &--visible {
+        opacity: 1;
+    }
+
+    .scrolling-boat {
+        width: 50px;
+        height: auto;
+        position: relative;
+    }
+
+    .progress {
+        position: absolute;
+        left: 0;
+        top: 10px;          
+        width: 100%;
+        height: 25px;
+        background: #57c4d6;  
+        transform-origin: left center;
+        transform: scaleX(0); 
+    }
 }
 
-.scrolling-boat--visible {
-    opacity: 1;
-}
+
