--- a/src/styles/_sjømann.scss
+++ b/src/styles/_sjømann.scss
@@ -114,15 +114,13 @@
             figure {
                 align-items: center;
                 img {
-                    width: 20%;
+                    width: 30%;
                 }
             }
         }
 
         .boat {
             figure {
-                margin-left: 7rem;
-                margin-right: 7rem;
                 align-items: center;
                 display: flex;
                 flex-direction: column;
@@ -154,6 +152,47 @@
                 }
             }
         }
+
+    }
+}
+
+@media (min-width: 1024px) {
+    .tormod-article {
+        .intro {
+            h2 {
+                margin: 0 20rem 0 20rem;
+            }
+
+            p {
+                margin: 3rem 20rem 3rem 20rem;
+            }
+        }
+
+        .sertificate {
+            p {
+                margin-left: 18rem;
+                margin-right: 18rem;
+            }
+
+            .sertificate2 {
+                margin: 0 18rem 8rem 18rem;
+            }
+        }
+
+        .boat {
+            h3, p {
+                margin-left: 20rem;
+                margin-right: 20rem;
+            }
+        }
+
+        .love, .drama, .safe {
+            h3, p {
+                margin-left: 20rem;
+                margin-right: 20rem;
+            }
+        }
+
     }
 }
 
