--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -1,52 +1,58 @@
 .slider-section {
-        position: relative;
-        min-width: 100%;
-        height: 400px;
-        margin: 0 auto; 
-        overflow: hidden;
+    position: relative;
+    min-width: 100%;
+    height: 400px;
+    margin: 0 auto; 
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgb(169 169 169 / 10%);
+    padding-top: 1.5rem;
+
+    .slider {
         display: flex;
         align-items: center;
-        justify-content: center;
         flex-direction: column;
-        background-color: rgb(169 169 169 / 10%);
-        padding-top: 1.5rem;
+    }
 
-        img {
-            max-height: 350px;
-            width: 285px;  
-            display: flex
+    img {
+        max-height: 350px;
+        width: 285px;  
+        display: flex
+    }
+
+    .slider-caption {
+        margin-top: 10px; 
+        color: #203E51;
+        font-size: 1rem;
+        text-align: center;
+        width: 100%;
+    }
+
+    .slider-button {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background: rgba(0, 0, 0, 0.4);
+        border: none;
+        color: white;
+        font-size: 2rem;
+        padding: 0 10px;
+        cursor: pointer;
+        user-select: none;
+        z-index: 10;
+
+        &.prev {
+        left: 5px;
         }
 
-        .slider-caption {
-            margin-top: 10px; 
-            color: #203E51;
-            font-size: 1rem;
-            text-align: center;
-            width: 100%;
-        }
-
-        .slider-button {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: rgba(0, 0, 0, 0.4);
-            border: none;
-            color: white;
-            font-size: 2rem;
-            padding: 0 10px;
-            cursor: pointer;
-            user-select: none;
-            z-index: 10;
-
-            &.prev {
-            left: 5px;
-            }
-
-            &.next {
-            right: 5px;
-            }
+        &.next {
+        right: 5px;
         }
     }
+}
 
 @media (min-width: 768px) {
     .slider-section {
