--- a/src/styles/_lasse.scss
+++ b/src/styles/_lasse.scss
@@ -33,7 +33,7 @@
 
         img {
             width: 70%;
-            max-height: 400px;
+            max-height: 450px;
             border-radius: 15px;
         }
 
@@ -164,4 +164,19 @@
             }
         }
     }
+
+    .spin-pic {
+        display: inline-block;
+        animation: spin 2s linear 1;
+    }
+
+    @keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+
 }
