--- a/src/styles/_lasse.scss
+++ b/src/styles/_lasse.scss
@@ -76,6 +76,7 @@
             width: 45%;
             height: fit-content;
             border-radius: 15px;
+            max-height: 215px;
         }
     }
 
