--- a/src/styles/_scrolltext.scss
+++ b/src/styles/_scrolltext.scss
@@ -49,6 +49,7 @@
 @media (min-width: 1000px) {
   .scroll-text {
     max-width: 1200px;
+    font-size: 1.2rem;
 
     .text-1{
       margin-right: 50rem;
