--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -84,6 +84,33 @@
         }
     }
 
+    .responsibility {
+        .container {
+            .Bubble {
+                font-weight: bold;
+                font-size: 1.4rem;
+                display: inline-block;
+                max-width: 300px;
+                padding: 10px 14px;
+                border: 5px solid #20566f;
+                border-radius: 12px;
+                position: relative;
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    left: 5px;
+                    bottom: -13px;
+                    width: 0;
+                    height: 0;
+                    border-top: 8px solid #20566f;
+                    border-left: 8px solid transparent;
+                    border-right: 8px solid transparent;
+                }
+            }
+        }
+    }
+
     .end-story {
         display: flex;
         flex-direction: column;
@@ -193,6 +220,10 @@
 @media (min-width: 1024px) {
 
     .trond-article {
+        p {
+            font-size: 1.2rem;
+        }
+
         .flex-dollar {
             .dollarBill-section {
                 min-width: 40%;
