--- a/src/styles/_skjermtid.scss
+++ b/src/styles/_skjermtid.scss
@@ -7,7 +7,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-self: center;
+        justify-content: center;
 
         img {
             max-width: 200px;
@@ -131,3 +131,15 @@
     }
 }
 
+@media (min-width: 1024px) {
+    .skjermtid-article {
+        p {
+            font-size: 1.2rem;
+        }
+
+        .scrolling, .limb2 {
+            margin-left: 20rem;
+            margin-right: 20rem;
+        }
+    }
+}
