--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -214,6 +214,11 @@
                 width: 50%;
             }
         }
+
+        .container {
+            display: flex;
+            justify-content: center;
+        }
     }
 }
 
