--- a/src/styles/_lasse.scss
+++ b/src/styles/_lasse.scss
@@ -306,6 +306,11 @@
 
 @media(min-width: 1440px) {
     .lasse-article{
+        .lasse-flex {
+            margin-right: 20rem;
+            margin-left: 20rem;
+        }
+
         p {
             font-size: 1.2rem;
         }
