--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -230,13 +230,15 @@
         }
 
         .flex-dollar {
+            margin-left: 20rem;
+            margin-right: 20rem;
+
             .dollarBill-section {
                 min-width: 40%;
             }
         }
 
         .end-story {
-
             img {
                 width: 40% !important;
             }
