--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -12,7 +12,8 @@
 
   img {
     position: absolute;
-    inset: 0;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -34,6 +35,7 @@
     font-size: 2rem;
     text-align: center;
     font-style: italic;
+    opacity: 0;
   }
 
   .over-image-content {
@@ -45,6 +47,7 @@
     color: black;
     width: 180px;
     height: auto;
+    opacity: 0;
   }
 
   &::after {  
