--- a/src/styles/_skjermtid.scss
+++ b/src/styles/_skjermtid.scss
@@ -35,6 +35,8 @@
         margin: 4rem 2rem 0 2rem;
     }
 
+    //Hjälp av chatgpt
+
     .survey {
         max-width: 350px;
         margin: 5rem 0;
