--- a/src/styles/_zoomtransition.scss
+++ b/src/styles/_zoomtransition.scss
@@ -3,7 +3,6 @@
   overflow: hidden; 
   z-index: 1;
   margin-bottom: 0;
-  isolation: isolate;
   min-height: calc(var(--vh, 1vh) * 400);
 
   .zoom-section {
@@ -21,7 +20,6 @@
       width: 100%;
       height: 100px;
       background: linear-gradient(to bottom, white, rgba(255, 255, 255, 0));
-      pointer-events: none;
       z-index: 4;
     }
 
@@ -32,21 +30,20 @@
       overflow: hidden;
       z-index: 2;
 
-      .zoom-image {
+      .zoom-image{
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
-        will-change: transform, opacity;
       }
 
-      .zoom-image.base {
+      .zoom-image.start {
         z-index: 0;
       }
 
-      .zoom-image.overlay {
+      .zoom-image.end {
         z-index: 1;
         opacity: 0;
       }
