--- a/src/styles/_scrollvideo.scss
+++ b/src/styles/_scrollvideo.scss
@@ -1,7 +1,7 @@
 .scroll-video-container {
   position: relative;
   width: 100%;
-  height: calc(var(--vh, 1vh) * 60);
+  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
