--- a/src/styles/_heroscroll.scss
+++ b/src/styles/_heroscroll.scss
@@ -1,12 +1,12 @@
 .hero-scroll {
   position: relative;
-  height: calc(var(--vh, 1vh) * 150);
+  height: 150vh;
 
   .hero-image {
     position: sticky;
     top: 0;
     width: 100%;
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
     object-fit: cover;
     opacity: 85%;
   }
