--- a/src/styles/_imgscrollswap.scss
+++ b/src/styles/_imgscrollswap.scss
@@ -6,7 +6,7 @@
 .img-scroll-flipbook {
   position: relative;
   width: 100%;
-  min-height: calc(var(--vh, 1vh) * 100);
+  min-height: 100vh;
   overflow: hidden;
   background-color: black;
 
@@ -56,7 +56,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: calc(var(--vh, 1vh) * 20);
+    height: 20vh;
     pointer-events: none;
     z-index: 15;
 
