--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -43,7 +43,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: calc(var(--vh, 1vh) * 40);      
+            height: 40vh;      
             pointer-events: none;
             background: linear-gradient(
             to bottom,
