--- a/src/styles/_zoomtransition.scss
+++ b/src/styles/_zoomtransition.scss
@@ -3,13 +3,13 @@
   overflow: hidden; 
   z-index: 1;
   margin-bottom: 0;
-  min-height: calc(var(--vh, 1vh) * 400);
+  min-height: 400vh;
 
   .zoom-section {
     width: 100%;
     position: relative;
     z-index: 1;
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
     overflow: visible;
 
     &::before {
@@ -63,7 +63,7 @@
 
 @media (min-width: 1400px) {
   .transition-block {
-    min-height: calc(var(--vh, 1vh) * 350);
+    min-height: 350vh;
   }
 }
 
