--- a/src/styles/_lasse.scss
+++ b/src/styles/_lasse.scss
@@ -2,7 +2,7 @@
     background-color: #273B16;
     color: white;
 
-    //Fått hjälp från chatgpt
+    //Fått hjälp från chatgpt med spin
     .spin-pic {
         display: inline-block;
         animation: spin 2s linear 1;
@@ -178,7 +178,7 @@
     }
 
     .container{
-        //Hjälp från chatgpt
+        //Hjälp från chatgpt med Chatboble
         .Bubble {
             display: inline-block;
             max-width: 300px;
