--- a/src/styles/_skjermtid.scss
+++ b/src/styles/_skjermtid.scss
@@ -35,7 +35,7 @@
         margin: 4rem 2rem 0 2rem;
     }
 
-    //Hjälp av chatgpt
+    //Hjälp av chatgpt med survey
 
     .survey {
         max-width: 350px;
