--- a/src/styles/_trond.scss
+++ b/src/styles/_trond.scss
@@ -86,6 +86,7 @@
 
     .responsibility {
         .container {
+            //Fått hjälp av chatgpt med chatboble
             .Bubble {
                 font-weight: bold;
                 font-size: 1.4rem;
